--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hallo, this is Mazen.</h1>
+    <h1>Hallo, this is my branch.</h1>
     <script src="app.js"></script>
     
 </body>
